kubernetes/apps/cyberchef/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: cyberchef-ingress
  namespace: cyberchef
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`cyberchef.sobrinho.pt`)
      kind: Rule
      services:
        - name: cyberchef
          port: main
  tls:
    secretName: cyberchef-cert
